--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "firebase": "^8.4.2",
+    "firebase-admin": "^9.11.0",
     "next": "10.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
